# hexagon_c

./: .gitignore  conversation_backup.md  modelist.xml  socket_config_sync.md
a_hexagon/a_hexagon/: CMakeLists.txt  a_hexagon_app_8hz  a_hexagon_app_optimized  a_hexagon_app_test_generator  a_hexagon_app_updated  a_hexagon_app_with_test_generator  gcc-8.5-install.sh
a_hexagon/a_hexagon/docs/: Doxyfile.in
a_hexagon/a_hexagon/latex/: ExtrapTrackData_8cpp.tex  ExtrapTrackData_8h.tex  ExtrapTrackData_8h__dep__incl.md5  TrackDataExtrapolator_8cpp.tex  TrackDataIncomingPort_8cpp__incl.md5  TrackDataIncomingPort_8h__incl.md5  TrackDataOutgoingPort_8h.tex  TrackDataOutgoingPort_8h__incl.md5  TrackDataOutgoingPort_8h_source.tex  TrackData_8cpp.tex  TrackData_8h.tex  TrackData_8h__dep__incl.md5  ZeroMQExtrapTrackDataAdapter_8h.tex  classMockOutgoingAdapter.tex  classMockOutgoingAdapter__coll__graph.md5  classdomain_1_1adapters_1_1outgoing_1_1ZeroMQExtrapTrackDataAdapter.tex  classdomain_1_1logic_1_1TrackDataExtrapolator.tex  classdomain_1_1model_1_1TrackData.tex  classdomain_1_1ports_1_1incoming_1_1TrackDataIncomingPort.tex  dir_04bcccf53e8b17c9860051db78d44955.tex  dir_085924db4bed469054a9264cf96b0d5e.tex  dir_085924db4bed469054a9264cf96b0d5e_dep.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_2b747c41f9224e16c36ba852a4298c4c.tex  dir_2b747c41f9224e16c36ba852a4298c4c_dep.md5  dir_59e154daa71ab644ff60a4d6c4d01bbf_dep.md5  dir_60222f0bfb1bea076708dee7ed8b2f5e.tex  dir_60222f0bfb1bea076708dee7ed8b2f5e_dep.md5  dir_622e678d92eb2507928c30d39871e474.tex  dir_7d52dfd286abdee16513d8c11a48cc0d.tex  dir_7d52dfd286abdee16513d8c11a48cc0d_dep.md5  dir_844f6ab5c2ae79211596f3dcdd81adb7.tex  dir_ceabbcd2fdcc56cbee1ac333d0fa00fe_dep.md5  dir_da504fdbdb3432b52091361267805e53.tex  files.tex  hierarchy.tex  namespacedomain_1_1adapters.tex  namespacedomain_1_1logic.tex  test_2application_2main_8cpp.tex
a_hexagon/a_hexagon/src/application/: main.cpp  main_original.cpp
a_hexagon/a_hexagon/src/utilities/: JsonConfigParser.cpp  JsonConfigParser.hpp
a_hexagon/a_hexagon/src/zmq_messages/: DelayCalcTrackData.json  ExtrapTrackData.json  FinalCalcTrackData.json  ProcessedTrackData.json
b_hexagon/b_hexagon/: .gitignore  CMakeLists.txt  COMPILATION_GUIDE.md  Calisan_scriptler.md  DYNAMIC_CONFIG_SUMMARY.md  Doxyfile  HEXAGONAL_DOCS_COMPLETE.md  README.md  TESTING_GUIDE.md  b_hexagon_app  b_hexagon_app_debug  b_hexagon_app_optimized  build_and_run.sh  build_docs.sh  compile_commands.json  compile_libzmq.sh  demo_dynamic_config.cpp  performance_test.cpp  quick_build.sh  run_domain_tests.sh  run_integration_test.sh  validate_external_libzmq.sh
b_hexagon/b_hexagon/assets/: header.html  mermaid.css
b_hexagon/b_hexagon/base_project/: base_project.cpp
b_hexagon/b_hexagon/docs/: API_DOCUMENTATION.md  DOXYGEN_SETUP.md  EXTERNAL_LIBZMQ_COMPILATION.md  EXTERNAL_LIBZMQ_INTEGRATION_SUMMARY.md  MANUAL_LIBZMQ_INTEGRATION.md  MISRA_COMPLIANCE_IMPLEMENTATION.md  MISRA_CPP_2023_COMPLIANCE.md  MISRA_REFACTORING_COMPLETE.md  MISRA_ZEROMQ_SENDER_ANALYSIS.md  PROJECT_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS_UPDATE.md  README.md  ZEROMQ_CPP_WRAPPER_MIGRATION.md  architecture.md
b_hexagon/b_hexagon/docs/html/: _a_p_i___d_o_c_u_m_e_n_t_a_t_i_o_n_8md.html  _calculator_service_8cpp.html  _calculator_service_8cpp__incl.map  _calculator_service_8cpp__incl.md5  _calculator_service_8hpp.html  _calculator_service_8hpp.js  _calculator_service_8hpp__dep__incl.map  _calculator_service_8hpp__dep__incl.md5  _calculator_service_8hpp__incl.map  _calculator_service_8hpp__incl.md5  _calculator_service_8hpp_source.html  _console_data_receiver_8hpp.html  _console_data_receiver_8hpp_source.html  _console_data_sender_8hpp.html  _console_data_sender_8hpp_source.html  _d_o_x_y_g_e_n___s_e_t_u_p_8md.html  _delay_calculated_track_data_8cpp.html  _delay_calculated_track_data_8cpp__incl.map  _delay_calculated_track_data_8cpp__incl.md5  _delay_calculated_track_data_8hpp.html  _delay_calculated_track_data_8hpp.js  _delay_calculated_track_data_8hpp__dep__incl.map  _delay_calculated_track_data_8hpp__dep__incl.md5  _delay_calculated_track_data_8hpp_source.html  _i_data_receiver_8hpp.html  _i_data_receiver_8hpp.js  _i_data_receiver_8hpp__dep__incl.map  _i_data_receiver_8hpp__dep__incl.md5  _i_data_receiver_8hpp__incl.map  _i_data_receiver_8hpp__incl.md5  _i_data_receiver_8hpp_source.html  _i_data_sender_8hpp.html  _i_data_sender_8hpp.js  _i_data_sender_8hpp__dep__incl.map  _i_data_sender_8hpp__dep__incl.md5  _i_data_sender_8hpp__incl.map  _i_data_sender_8hpp__incl.md5  _i_data_sender_8hpp_source.html  (+346 more)
b_hexagon/b_hexagon/sampleProject/: CMakeList.txt  README.md
b_hexagon/b_hexagon/src/: program
b_hexagon/b_hexagon/tests/: DelayCalcTrackDataTest.cpp  DelayCalculatedTrackDataTest.cpp  README.md  TrackCalculationsTest.cpp  TrackDataTest.cpp
b_hexagon/b_hexagon/tests_backup/: ExtrapTrackDataTest.cpp
hexagon_c/: CMakeLists.txt  Calisan_scriptler.md  README.md  receiver_status.txt  test_demo_receiver.cpp  test_latency_receiver.cpp  test_manual_receiver.cpp  test_receiver_simple.cpp  test_simple.cpp  test_zmq_real_receiver.cpp  test_zmq_simple_receiver.cpp  test_zmq_verbose_receiver.cpp  zmq_receiver_log.txt
hexagon_c/ex_b/: hat_b_app_radio_optimized
hexagon_c/hexagon_bx/: CMakeLists.txt  README.md  hat_b_app_radio  zmq_sender_log.txt
hexagon_c/hexagon_c/: CMakeLists.txt  hexagon_c_app  hexagon_c_app_binary  hexagon_c_app_binary_optimized  hexagon_c_app_updated  modelist.xml  test_processor
hexagon_c/hexagon_c/test_export/: TrackDataProcessor_test.cpp
hexagon_c/src/application/: main.cpp
hexagon_c/zmq_tests/: CMakeLists.txt  CMakeListsBACKUP2.txt  CMakeListsBackUp.txt  app1  app1_compatible.cpp  app1_source.cpp  app2  app2_compatible.cpp  app2_processor.cpp  app3  app3_compatible.cpp  app3_listener.cpp  build.txt  pub_epgm.cpp  pub_udp.cpp  radio_epgm.cpp  radio_udp.cpp  radio_udp_detailed.cpp  subscriber.py  subscriber_radio_udp.cpp  subscriber_radio_udp.py  subscriber_radio_udp_detailed.cpp  test_zmq.cpp
(+523 files in other folders)
